--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.0.1+1
+version: 0.0.2+2
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -30,13 +30,13 @@ dependencies:
   url_launcher: ^5.0.1
   flutter_email_sender: ^5.0.0
   package_info: ^2.0.0
-  logger: ^1.0.0
   photo_view: ^0.11.1
   audio_service: ^0.17.0
   just_audio: ^0.7.3
   rxdart: ^0.26.0
   webview_flutter: ^2.0.4
   flutter_custom_tabs: ^0.6.0
+  onesignal_flutter: ^2.6.3
 
 dev_dependencies:
   flutter_test:
