--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,19 +1,7 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.wahegurulive.gpmkc_mobile_app">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.wahegurulive.gpmkc_mobile_app">
 
-    <application
-        android:name=".MainApplication"
-        android:icon="@mipmap/ic_launcher"
-        android:label="Gurdwara Prabh Milne Ka Chao"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:usesCleartextTraffic="true">
-        <activity
-            android:name=".MainActivity"
-            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
-            android:hardwareAccelerated="true"
-            android:launchMode="singleTop"
-            android:theme="@style/LaunchTheme"
-            android:windowSoftInputMode="adjustResize">
+    <application android:name=".MainApplication" android:icon="@mipmap/ic_launcher" android:label="Gurdwara Prabh Milne Ka Chao" android:roundIcon="@mipmap/ic_launcher_round" android:usesCleartextTraffic="true">
+        <activity android:name=".MainActivity" android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" android:hardwareAccelerated="true" android:launchMode="singleTop" android:theme="@style/LaunchTheme" android:windowSoftInputMode="adjustResize">
             <!-- Specifies an Android theme to apply to this Activity as soon as
                        the Android process has started. This theme is visible to the user
                        while the Flutter UI initializes. After that, this theme continues
@@ -27,18 +15,12 @@
                        screen fades out. A splash screen is useful to avoid any visual
                        gap between the end of Android's launch screen and the painting of
                        Flutter's first frame. -->
-            <meta-data
-                android:name="io.flutter.embedding.android.SplashScreenDrawable"
-                android:resource="@drawable/launch_background" />
-            <meta-data
-                android:name="io.flutter.embedding.android.NormalTheme"
-                android:resource="@style/NormalTheme" />
+            <meta-data android:name="io.flutter.embedding.android.SplashScreenDrawable" android:resource="@drawable/launch_background" />
+            <meta-data android:name="io.flutter.embedding.android.NormalTheme" android:resource="@style/NormalTheme" />
         </activity>
         <!-- Don't delete the meta-data below.
                  This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
-        <meta-data
-            android:name="flutterEmbedding"
-            android:value="2" />
+        <meta-data android:name="flutterEmbedding" android:value="2" />
 
         <receiver android:name="com.ryanheise.audioservice.MediaButtonReceiver">
             <intent-filter>
