--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,15 @@ dependencies:
   url_launcher: ^5.0.1
   flutter_email_sender: ^5.0.0
   package_info: ^2.0.0
+  # As noted on issue 20761, package_info on iOS requires the Xcode build folder to be rebuilt after changes to the version string in pubspec.yaml. Clean the Xcode build folder with: XCode Menu -> Product -> (Holding Option Key) Clean build folder.
   photo_view: ^0.11.1
   audio_service: ^0.17.0
   just_audio: ^0.7.3
   rxdart: ^0.26.0
-  webview_flutter: ^2.0.4
   flutter_custom_tabs: ^0.6.0
   onesignal_flutter: ^2.6.3
+  shared_preferences: ^2.0.5
+  device_info: ^2.0.0
 
 dev_dependencies:
   flutter_test:
